--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,8 +61,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/dialog_frame.svg
-    - assets/profile.svg
-    - assets/trapezium.svg
+    - assets/person_picture.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
